# GoldRush-Luck

./: .env.example  .gitignore  Makefile  README.md  deathroll-design-system.html  goldrush-design-system.html  pyproject.toml
.github/workflows/: ci.yml
deathroll_core/: db.py
deathroll_core/balance/: account_stats.py  cashier_matcher.py  cashier_roster.py  dw_manager.py  exceptions.py
deathroll_core/config/: __init__.py
deathroll_core/discord_helpers/: __init__.py  channel_binding.py  role_binding.py
deathroll_core/embeds/: account.py  dw_tickets.py
deathroll_core/fairness/: api.py  decoders.py  engine.py  seeds.py
deathroll_core/logging/: __init__.py
deathroll_core/ratelimit/: __init__.py
deathroll_deposit_withdraw/: __main__.py  audit_log.py  client.py  disputes.py  healthcheck.py  metrics.py  welcome.py
deathroll_deposit_withdraw/cashiers/: alert.py  live_updater.py
deathroll_deposit_withdraw/cogs/: account.py  admin.py  cashier.py  deposit.py  ticket.py  withdraw.py
deathroll_deposit_withdraw/setup/: channel_factory.py  global_config_writer.py
deathroll_deposit_withdraw/tickets/: factory.py  orchestration.py
deathroll_deposit_withdraw/views/: modals.py
deathroll_deposit_withdraw/workers/: __init__.py  _periodic.py  audit_chain_verifier.py  cashier_idle.py  claim_idle.py  metrics_refresher.py  stats_aggregator.py  ticket_timeout.py
deathroll_luck/admin/: force_rotate.py
deathroll_poker/: README.md
docs/: README.md  architecture.md  backup-restore.md  changelog.md  dr-plan.md  generate_economics_pdf.py  observability.md  onboarding.md  operations.md  provably-fair.md  release-process.md  rename-runbook-2026-05-03.md  responsible-gambling.md  runbook.md  secrets-rotation.md  security-review-dw-2026-05-03.md  security.md
docs/adr/: 0001-monorepo-layout.md  0011-dw-as-economic-frontier.md  0012-stateless-deposit-modal.md  0013-private-channels-for-tickets.md  0014-cashier-online-status-model.md  0015-treasury-as-system-account.md  0016-2fa-modals-for-money-ops.md  0017-admin-setup-channel-creation.md
docs/api/: bet-lifecycle.md  deposit-withdraw-flow.md  fairness-rotation.md
docs/games/: blackjack.md  coinflip.md  dice.md  diceduel.md  hotcold.md  mines.md  ninetyninex.md  raffle.md  roulette.md  stakingduel.md
docs/sessions/: 2026-04-29_to_2026-05-01-session-log.md  2026-04-29_to_2026-05-02-session-log.md  2026-04-29_to_2026-05-03-session-log.md
docs/superpowers/specs/: 2026-04-29-deathroll-dw-v1-design.md  2026-04-29-deathroll-dw-v1-implementation-plan.md  2026-04-29-deathroll-luck-v1-design.md  2026-04-29-deathroll-luck-v1-implementation-plan.md  2026-04-29-goldrush-dw-v1-design.md  2026-04-29-goldrush-dw-v1-implementation-plan.md  2026-04-29-goldrush-luck-v1-design.md  2026-04-29-goldrush-luck-v1-implementation-plan.md
docs/tickets/: cashier-onboarding.md  compliance.md  deposit-flow.md  disputes.md  ticket-lifecycle.md  treasury-management.md  withdraw-flow.md
docs/verifier/: EXAMPLES.md  README.md  test_vectors.json  verify.js  verify.py
goldrush_core/: db.py
goldrush_core/balance/: account_stats.py  cashier_matcher.py  cashier_roster.py  dw_manager.py  exceptions.py
goldrush_core/config/: __init__.py
goldrush_core/discord_helpers/: __init__.py  channel_binding.py  role_binding.py
goldrush_core/embeds/: account.py  dw_tickets.py
goldrush_core/logging/: __init__.py
goldrush_core/models/: dw_pydantic.py
goldrush_deposit_withdraw/: __main__.py  audit_log.py  client.py  disputes.py  healthcheck.py  metrics.py  welcome.py
goldrush_deposit_withdraw/cashiers/: alert.py  live_updater.py
goldrush_deposit_withdraw/cogs/: __init__.py  account.py  admin.py  cashier.py  deposit.py  ticket.py  withdraw.py
goldrush_deposit_withdraw/setup/: channel_factory.py  global_config_writer.py
goldrush_deposit_withdraw/tickets/: factory.py  orchestration.py
goldrush_deposit_withdraw/views/: modals.py
goldrush_deposit_withdraw/workers/: __init__.py  _periodic.py  audit_chain_verifier.py  cashier_idle.py  claim_idle.py  metrics_refresher.py  stats_aggregator.py  ticket_timeout.py
goldrush_poker/: README.md
ops/alembic/: alembic.ini  env.py
ops/alembic/versions/: 20260501_0001_core_users_balances.py  20260501_0002_core_audit_log.py  20260501_0003_dw_tickets.py  20260501_0004_dw_cashier_tables.py  20260501_0005_dw_disputes_embeds_config.py  20260501_0006_dw_deposit_fns.py  20260501_0007_dw_withdraw_fns.py  20260501_0008_dw_lifecycle_fns.py  20260501_0009_dw_cashier_fns.py  20260501_0010_dw_dispute_fns.py  20260501_0011_dw_treasury_fns.py  20260501_0012_dw_ban_fns.py  20260503_0013_dw_dispute_reject_fn.py  20260503_0014_dw_disputes_message_id.py  20260503_0015_dw_deposit_ban_check.py  20260503_0016_dw_expire_cashier.py  20260503_0017_core_audit_chain_verifier.py  20260503_0018_core_list_audit_events.py  20260504_0019_fairness_user_seeds.py  20260504_0020_luck_schemas.py  20260504_0021_luck_seed_defaults.py  20260504_0022_luck_apply_bet.py  20260504_0023_luck_resolve_refund_cashout.py  20260504_0024_luck_helpers.py  20260504_0025_fairness_rotate_user_seed.py
ops/docker/: Dockerfile.dw  compose.observability.yml  compose.prod.yml  compose.yml
ops/observability/: alertmanager-discord.yml
ops/observability/alerts/: deathroll-dw.yml  (+1 more)
ops/postgres/: 00-init-roles.sh  01-schemas-grants.sql
ops/scripts/: backup.sh  deathroll-backup.cron  force_rotate.py  goldrush-backup.cron  restore.sh  vps_first_setup.sh
tests/reports/: dw-smoke-2026-05-03.md  dw-stress-2026-05-03.md
(+74 files in other folders)
